test/tests/stages/18_structures/invalid_types/tag_resolution/mismatched_return_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[43]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(return_struct)
  (
  void
  )
  {
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(result)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  return
  identifier(result)
  ;
  }
